--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,7 @@
   --main-color: #21252a;
   --secondary-color: #a4e021;
   --thirdary-color: #b02ef2;
-  --focus-border: #a3e021bd;
+  --focus-border: #a4e021;
   --font-color: #fff;
   --input-colors: ;
   --border-colors: ;
@@ -37,36 +37,33 @@ p {
 input {
   font-family: inherit;
   background: #fff;
-  padding: 0.375rem 0.75rem;
+  padding: 7px 10px;
   border-radius: 0.25rem;
   line-height: 1.5;
   font-size: 1rem;
   width: 100%;
-  border: 1px solid var(--secondary-color);
+  border: none;
   justify-self: center;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 input:focus {
   outline: 0;
-  border: 1px solid var(--secondary-color);
   box-shadow: 0 0 0 0.2rem var(--focus-border);
 }
 
 input:hover {
   outline: 0;
-  border: 1px solid var(--secondary-color);
   box-shadow: 0 0 0 0.2rem var(--focus-border);
 }
 
 button {
   font-family: inherit;
-  font-size: 20px;
   color: var(--main-color);
   background-color: var(--secondary-color);
   border-color: var(--secondary-color);
-  border: 1px solid transparent;
-  /* padding: 0.375rem 0.75rem; */
+  border: none;
+  padding: 8px 0px;
   border-radius: 0.25rem;
   line-height: 1.5;
   width: 120px;
@@ -79,14 +76,15 @@ button {
 
 button:focus {
   outline: 0;
-  border: 1px solid var(--secondary-color);
-  box-shadow: 0 0 0 0.2rem var(--focus-border);
+  /* border: 1px solid var(--secondary-color); */
+  /* box-shadow: 0 0 0 0.2rem var(--focus-border); */
 }
 
 button:hover {
   outline: 0;
   background-color: var(--thirdary-color);
-  border: 1px solid var(--thirdary-color);
+  /* box-shadow: 0 0 0 0.2rem var(--focus-border); */
+  /* border: 1px solid var(--thirdary-color); */
 }
 
 .notauth {
