--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 :root {
   --main-color: #21252a;
-  --secondary-color: #a4e021;
-  --thirdary-color: #b02ef2;
+  --secondary-color: #ffc400;
+  --thirdary-color: #212ee0;
   --focus-border: #a4e021;
   --font-color: #fff;
   --input-colors: ;
@@ -87,6 +87,7 @@ button:hover {
   /* border: 1px solid var(--thirdary-color); */
 }
 
+/* NOT AUTHENTICATED ROUTE /login  */
 .notauth {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -98,4 +99,68 @@ button:hover {
   gap: 10px;
   grid-column: 2;
   grid-row: 2;
+}
+
+/* AUTHENTICATED ROUTE /main */
+
+.auth {
+  display: grid;
+  gap: 20px;
+  grid-template-rows: auto auto auto;
+  justify-content: center;
+  text-align: center;
+}
+
+.auth__user {
+}
+
+.auth__timer {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: auto;
+  grid-auto-rows: auto;
+  /* background: blue; */
+}
+
+.auth__timer-content {
+  display: grid;
+  height: 40px;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: auto;
+  /* background: yellow; */
+}
+
+.auth__timer-content p {
+  color: black;
+}
+
+.auth__timer-content__info {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background: var(--thirdary-color);
+  width: 300px;
+}
+
+.auth__timer-content__close {
+  cursor: pointer;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  background: var(--secondary-color);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  width: 40px;
+  font-size: 20px;
+  transition: color 0.12s ease-in-out, background-color 0.12s ease-in-out,
+    border-color 0.12s ease-in-out, box-shadow 0.12s ease-in-out;
+}
+
+.auth__timer-content__close:hover {
+  background: red;
+}
+
+.auth__logout {
 }
