--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,6 +38,16 @@ p {
   color: var(--timers-font-color);
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 input {
   font-family: inherit;
   background: #fff;
@@ -176,7 +186,7 @@ button:hover {
 
 .content__info-time {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto;
 }
 
 .content__info-time p:first-child {
